Update Change some translations

--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
@@ -172,7 +172,7 @@
     <value>Speicherort</value>
   </data>
   <data name="DownloadVideos" xml:space="preserve">
-    <value>Lade Videos (tumblr.com gehostet)</value>
+    <value>Lade Videos (tumblr/twitter gehostet)</value>
   </data>
   <data name="EnqueueSelection" xml:space="preserve">
     <value>Auswahl hinzufügen</value>
