--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.it.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.it.resx
@@ -307,7 +307,7 @@
     <value>Scarica le immagini</value>
   </data>
   <data name="DownloadVideos" xml:space="preserve">
-    <value>Scarica i video (tumblr.com self hosted)</value>
+    <value>Scarica i video (tumblr/twitter self hosted)</value>
   </data>
   <data name="VideoSize" xml:space="preserve">
     <value>Dimensione video (px)</value>
@@ -519,7 +519,7 @@ Nota: l'api tumblr viene utilizzato solo per i download normali di blog tumblr.<
     <value>Rescans tutto il blog, non solo nuovi post.</value>
   </data>
   <data name="ToolTipForceRescanDescription" xml:space="preserve">
-    <value>Forza una scansione completa utilizzando l'api Tumblr.</value>
+    <value>Forza una scansione completa.</value>
   </data>
   <data name="CheckForUpdates" xml:space="preserve">
     <value>Controlla gli aggiornamenti</value>
