--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.no.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.no.resx
@@ -307,7 +307,7 @@
     <value>Last ned bilder</value>
   </data>
   <data name="DownloadVideos" xml:space="preserve">
-    <value>Last ned videoer (tumblr.com self hosted)</value>
+    <value>Last ned videoer (tumblr/twitter self hosted)</value>
   </data>
   <data name="VideoSize" xml:space="preserve">
     <value>Videostørrelse (px)</value>
@@ -515,7 +515,7 @@ Merk: The tumblr api brukes kun til vanlige tumblr blognedlastinger.</value>
     <value>Rescans hele bloggen, ikke bare nye innlegg.</value>
   </data>
   <data name="ToolTipForceRescanDescription" xml:space="preserve">
-    <value>Forces en komplett skanning med Tumblr api.</value>
+    <value>Forces en komplett skanning.</value>
   </data>
   <data name="CheckForUpdates" xml:space="preserve">
     <value>Se etter oppdateringer</value>
