--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.pl.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.pl.resx
@@ -307,7 +307,7 @@
     <value>Pobierz zdjęcia</value>
   </data>
   <data name="DownloadVideos" xml:space="preserve">
-    <value>Pobierz filmy wideo (tumblr.com self hosted)</value>
+    <value>Pobierz filmy wideo (tumblr/twitter self hosted)</value>
   </data>
   <data name="VideoSize" xml:space="preserve">
     <value>Rozmiar wideo (px)</value>
@@ -516,7 +516,7 @@ Uwaga: Aplikacja tumblr jest używana tylko w przypadku regularnych pobierania b
     <value>Rescans cały blog, a nie tylko nowe posty.</value>
   </data>
   <data name="ToolTipForceRescanDescription" xml:space="preserve">
-    <value>Wymusza pełne skanowanie przy użyciu aplikacji Tumblr.</value>
+    <value>Wymusza pełne skanowanie.</value>
   </data>
   <data name="CheckForUpdates" xml:space="preserve">
     <value>Sprawdź aktualizacje</value>
