--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.tr.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.tr.resx
@@ -307,7 +307,7 @@
     <value>Resimleri indirin</value>
   </data>
   <data name="DownloadVideos" xml:space="preserve">
-    <value>Videoları indir (tumblr.com kendine barındırılan)</value>
+    <value>Videoları indir (tumblr/twitter kendine barındırılan)</value>
   </data>
   <data name="VideoSize" xml:space="preserve">
     <value>Video boyutu (px)</value>
