--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
@@ -745,28 +745,6 @@ Die Cookies für die Einwilligung zum Datenschutz werden gespeichert und der Vor
 
 Vorlage: {Post-ID} _ {Fotoindex} _ {Ursprünglicher Dateiname}</value>
   </data>
-  <data name="ToolTipFilenameTemplateDescription" xml:space="preserve">
-    <value>Die folgenden Token können in der Dateinamenvorlage verwendet werden:
-   %f ursprünglicher Dateiname (Standard)
-   %d Postdatum (JJJJMTT)
-   %u post timestamp (number)
-   %p Post-Titel
-   %Ich poste ID
-   %n Bildindex (von Fotosets, sonst übersprungen)
-   %t für alle Tags (süß + Katzen, groß + Hunde)
-   %r für Runden
-   %s slug (letzter Teil der URL eines Posts)
-   %k Rundenschlüssel
-Obligatorische Token (wenn kein Token %f verwendet wird), um Dateinamen eindeutig zu machen:
-   %x "_{number}" ({number}: 2..n) an Dateiname angehängt
-   %y "({number})" ({number}: 2..n) an Dateiname angehängt
-Beispiel (Speichern eines Bildes):
-   %i_%f für {post id}_{tumblr filename}.jpg
-Wenn zusätzlich die Option "Gruppenfotosätze" aktiviert ist, wird für Bildsätze das Token %i 
-durch {post id}_{Bildindex} ersetzt, oder wenn das Token nicht verwendet wird, werden die 
-Bildsätze als {Post id}_{Bildindex}_{Dateinamenvorlage} gespeichert.
-Deaktivieren Sie die Option, wenn Sie Ihre eigene Vorlage für Fotosets verwenden möchten.</value>
-  </data>
   <data name="ForceRescan" xml:space="preserve">
     <value>Rescan erzwingen</value>
   </data>
@@ -904,5 +882,30 @@ Sie können die alten Mediendateien bei Bedarf manuell verschieben.</value>
   </data>
   <data name="ToolTipDownloadVideoThumbnailsDescription" xml:space="preserve">
     <value>Lädt verfügbare Video-Thumbnails herunter. Diese Einstellung ist unabhängig von „Bilder herunterladen“ und „Videos herunterladen“.</value>
+  </data>
+  <data name="ToolTipFilenameTemplateDescription" xml:space="preserve">
+    <value>Die folgenden Token können in der Dateinamenvorlage verwendet werden:
+   %f  ursprünglicher Dateiname (Standard)
+   %d Postdatum (jjjjMMtt)
+   %e Postdatum und Uhrzeit (jjjjMMttHHmmss)
+   %g Postdatum in GMT (jjjjMMtt)
+   %h Postdatum und Uhrzeit in GMT (jjjjMMttHHmmss)
+   %u post timestamp (number)
+   %p Post-Titel
+   %i  Post ID
+   %n Bildindex (von Fotosets, sonst übersprungen)
+   %t  für alle Tags (süße+Katzen,große+Hunde)
+   %r  Reblog
+   %s Slug (letzter Teil der URL eines Posts)
+   %k Reblog Schlüssel
+Obligatorische Token (wenn kein Token %f verwendet wird), um Dateinamen eindeutig zu machen:
+   %x "_{number}" ({number}: 2..n) an Dateiname angehängt
+   %y "({number})" ({number}: 2..n) an Dateiname angehängt
+Beispiel (Speichern eines Bildes):
+   %i_%f für {post id}_{tumblr filename}.jpg
+Wenn zusätzlich die Option "Fotosets gruppieren" aktiviert ist, wird für Bildsätze das Token %i 
+durch {Post id}_{Bildindex} ersetzt, oder wenn das Token nicht verwendet wird, werden die 
+Bildsätze als {Post id}_{Bildindex}_{Dateinamenvorlage} gespeichert.
+Deaktivieren Sie die Option, wenn Sie Ihre eigene Vorlage für Fotosets verwenden möchten.</value>
   </data>
 </root>
