--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.es.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.es.resx
@@ -747,16 +747,19 @@ plantilla: {ID de publicación} _ {Índice de fotos} _ {Nombre de archivo origin
   </data>
   <data name="ToolTipFilenameTemplateDescription" xml:space="preserve">
     <value>Los siguientes tokens se pueden utilizar en la plantilla de nombre de archivo:
-   %f nombre de archivo original (predeterminado)
-   %d fecha de publicación (aaaammdd)
+   %f  nombre de archivo original (predeterminado)
+   %d fecha de publicación (aaaaMMdd)
+   %e fecha y hora de publicación (aaaaMMddHHmmss)
+   %g fecha de publicación en GMT (aaaaMMdd)
+   %h fecha y hora de publicación en GMT (aaaaMMddHHmmss)
    %u marca de tiempo de publicación (número)
    %p título de la publicación
-   %i publico id
+   %i  publico id
    %n índice de imágenes (de conjuntos de fotos, de lo contrario se omitieron)
-   %t para todas las etiquetas (gatos + lindos, perros + grandes)
-   %r para reblog
-   %s slug (última parte de la URL de una publicación)
-   %k clave-de-rebote
+   %t  para todas las etiquetas (gatos + lindos, perros + grandes)
+   %r  para reblog
+   %s  slug (última parte de la URL de una publicación)
+   %k  clave-de-rebote
 Tokens obligatorios (si no se usa el token %f) para hacer que los nombres de archivo sean únicos:
    %x "_{número}" ({número}: 2..n) añadido al nombre del archivo
    %y "({número})" ({número}: 2..n) añadido al nombre del archivo
