--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
@@ -989,7 +989,10 @@ template: {Post Id}_{Photo Index}_{Original Filename}</value>
     <value>The following tokens can be used in the filename template:
   %f   original filename (default)
   %b  blog name
-  %d  post date (yyyymmdd)
+  %d  post date (yyyyMMdd)
+  %e  post date and time (yyyyMMddHHmmss)
+  %g  post date in GMT (yyyyMMdd)
+  %h  post date and time in GMT (yyyyMMddHHmmss)
   %u  post timestamp (number)
   %p  post title
   %i   post id
