Add issue #231 New filename template token for reblog origin's blog name
- It shall be possible to add the blog name of the root/origin of a reblog to the filename.
- Added new filename template token %o for reblog root's blog name.

--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
@@ -891,6 +891,7 @@ Sie können die alten Mediendateien bei Bedarf manuell verschieben.</value>
    %g Postdatum in GMT (jjjjMMtt)
    %h Postdatum und Uhrzeit in GMT (jjjjMMttHHmmss)
    %u post timestamp (number)
+   %o Blog-Name des Reblog-Ursprungs
    %p Post-Titel
    %i  Post ID
    %n Bildindex (von Fotosets, sonst übersprungen)
